# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  json.cast  plain.cast  pyproject.toml  sonar-project.properties  stylish.cast
.github/workflows/: build.yml  ci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
gendiff/: __init__.py  cli.py  debug_nested.py  debug_order.py  diff_tree.py  differ.py  formatter.py  parser.py
gendiff/core/: __init__.py  diff_tree.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  cli.py  gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_nested.py  test_gendiff_plain.py
