[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = [{name = "AJleX57", email = "s.alex06.a@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0"
]

[project.scripts]
gendiff = "gendiff.scripts.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
packages = ["gendiff"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"